added a button to modify grip size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="button">Change Grid Size</button>
     <div id="container"></div>
     <script src="grip.js" defer></script>
 </body>
